Fix disable-layer z-index

--- a/src/wirecloud/defaulttheme/static/css/styled_elements_core.css
+++ b/src/wirecloud/defaulttheme/static/css/styled_elements_core.css
@@ -31,7 +31,7 @@ div.container > .disable-layer {
     height: 100%;
     padding: 0px;
     margin: 0px;
-    z-index: 111111;
+    z-index: 100111;
     background: transparent;
 }
 
